# ITKv4FEM-Kiran

Code/Algorithms/: itkFEMFiniteDifferenceFunctionLoad.h  itkFEMFiniteDifferenceFunctionLoad.txx  itkFEMRegistrationFilter.h  itkFEMRegistrationFilter.txx
Code/Common/: itkNumericTraitsFixedArrayPixel.cxx
Code/Numerics/FEM/: CMakeLists.txt  itkFEM.h  itkFEMElement1DStress.h  itkFEMElement1DStress.txx  itkFEMElement2DC0LinearLine.cxx  itkFEMElement2DC0LinearLine.h  itkFEMElement2DC0LinearLineStress.cxx  itkFEMElement2DC0LinearLineStress.h  itkFEMElement2DC0LinearQuadrilateral.cxx  itkFEMElement2DC0LinearQuadrilateral.h  itkFEMElement2DC0LinearQuadrilateralMembrane.cxx  itkFEMElement2DC0LinearQuadrilateralMembrane.h  itkFEMElement2DC0LinearQuadrilateralStrain.cxx  itkFEMElement2DC0LinearQuadrilateralStrain.h  itkFEMElement2DC0LinearQuadrilateralStress.cxx  itkFEMElement2DC0LinearQuadrilateralStress.h  itkFEMElement2DC0LinearTriangular.cxx  itkFEMElement2DC0LinearTriangular.h  itkFEMElement2DC0LinearTriangularMembrane.cxx  itkFEMElement2DC0LinearTriangularMembrane.h  itkFEMElement2DC0LinearTriangularStrain.cxx  itkFEMElement2DC0LinearTriangularStrain.h  itkFEMElement2DC0LinearTriangularStress.cxx  itkFEMElement2DC0LinearTriangularStress.h  itkFEMElement2DC0QuadraticTriangular.cxx  itkFEMElement2DC0QuadraticTriangular.h  itkFEMElement2DC0QuadraticTriangularStrain.cxx  itkFEMElement2DC0QuadraticTriangularStrain.h  itkFEMElement2DC0QuadraticTriangularStress.cxx  itkFEMElement2DC0QuadraticTriangularStress.h  itkFEMElement2DC1Beam.cxx  itkFEMElement2DC1Beam.h  itkFEMElement2DMembrane.h  itkFEMElement2DMembrane.txx  itkFEMElement2DStrain.h  itkFEMElement2DStrain.txx  itkFEMElement2DStress.h  itkFEMElement2DStress.txx  itkFEMElement3DC0LinearHexahedron.cxx  itkFEMElement3DC0LinearHexahedron.h  (+119 more)
Code/SpatialObject/: CMakeLists.txt  itkFEMObjectSpatialObject.h  itkFEMObjectSpatialObject.txx  itkMetaFEMObjectConverter.h  itkMetaFEMObjectConverter.txx  itkMetaSceneConverter.txx
Examples/Registration/: DeformableRegistration1.cxx  DeformableRegistration11.cxx
Testing/Code/Algorithms/: itkFEMRegistrationFilterTest.cxx
Testing/Code/BasicFilters/: itkDivideImageFilterTest.cxx
Testing/Code/Common/: itkPeriodicBoundaryConditionTest.cxx  itkThreadLoggerTest.cxx  itkVNLRoundProfileTest1.cxx
Testing/Code/Numerics/FEM/: CMakeLists.txt  itkFEMElement2DC0LinearLineStressItpackTest.cxx  itkFEMElement2DC0LinearLineStressTest.cxx  itkFEMElement2DC0LinearQuadrilateralMembraneTest.cxx  itkFEMElement2DC0LinearQuadrilateralStrainItpackTest.cxx  itkFEMElement2DC0LinearQuadrilateralStrainTest.cxx  itkFEMElement2DC0LinearQuadrilateralStressTest.cxx  itkFEMElement2DC0LinearQuadrilateralStressTestFEMObject.cxx  itkFEMElement2DC0LinearQuadrilateralStressTestFEMObjectReader.cxx  itkFEMElement2DC0LinearTriangleMembraneTest.cxx  itkFEMElement2DC0LinearTriangleStrainTest.cxx  itkFEMElement2DC0LinearTriangleStressTest.cxx  itkFEMElement2DC0QuadraticTriangleStrainTest.cxx  itkFEMElement2DC0QuadraticTriangleStressTest.cxx  itkFEMElement2DC1BeamTest.cxx  itkFEMElement2DMembraneTest.cxx  itkFEMElement2DQuadraticTriangularTest.cxx  itkFEMElement2DStrainTest.cxx  itkFEMElement2DTest.cxx  itkFEMElement3DC0LinearHexahedronMembraneTest.cxx  itkFEMElement3DC0LinearHexahedronStrainTest.cxx  itkFEMElement3DC0LinearTetrahedronMembraneTest.cxx  itkFEMElement3DC0LinearTetrahedronStrainTest.cxx  itkFEMElement3DMembraneTest.cxx  itkFEMElement3DTest.cxx  itkFEMElementTest.cxx  itkFEMElementTest.h  itkFEMExceptionTest.cxx  itkFEMFactoryTest.cxx  itkFEMGenerateMeshTest.cxx  itkFEMLandmarkLoadImplementationTest.cxx  itkFEMLinearSystemWrapperDenseVNLTest.cxx  itkFEMLinearSystemWrapperItpackTest.cxx  itkFEMLinearSystemWrapperItpackTest2.cxx  itkFEMLinearSystemWrapperVNLTest.cxx  itkFEMLoadBCMFCTest.cxx  itkFEMLoadBCMFCTestUser.cxx  itkFEMLoadEdgeTest.cxx  itkFEMLoadGravConstTest.cxx  itkFEMLoadPointTestUser.cxx  (+10 more)
Testing/Code/Numerics/FEM/Data/: 2DC0LinearLineStressTest.fem  2DC0LinearQuadrilateralMembraneTest.fem  2DC0LinearQuadrilateralStrainTest.fem  2DC0LinearQuadrilateralStressTest.fem  2DC0LinearTriangleMembraneTest.fem  2DC0LinearTriangleStrainTest.fem  2DC0LinearTriangleStressTest.fem  2DC0QuadraticTriangleStrainTest.fem  2DC0QuadraticTriangleStressTest.fem  2DC1BeamTest.fem  3DC0LinearHexahedronMembraneTest.fem  3DC0LinearHexahedronStrainTest.fem  3DC0LinearHexahedronStrainTest1.fem  3DC0LinearTetrahedronMembraneTest.fem  3DC0LinearTetrahedronStrainTest.fem  3DC0LinearTetrahedronStrainTest1.fem  3dscope-big.fem  3dscope.fem  HeadMRVolumeWithDirection.mhd  LoadBCMFCTest.fem  LoadEdgeTest.fem  LoadGravConstTest.fem  cell10.fem  cell2.fem  cell3.fem  cell4.fem  cell5.fem  hexa2.fem  hexa3.fem  hexa4-grav.fem  quad-lm.fem  quad2-small.fem  quad2-strain.fem  quad3-nodal.fem  quad3.fem  quad4.fem  quad5.fem  quad6-grav.fem  tetra2.fem  tetra3.fem  (+7 more)
Testing/Code/SpatialObject/: CMakeLists.txt  itkSpatialObjectTests.cxx
Utilities/MetaIO/: CMakeLists.txt  metaFEMObject.cxx  metaFEMObject.h  metaScene.cxx
Wrapping/CSwig/Algorithms/: wrap_itkThresholdSegmentationLevelSetImageFilter.cxx
